grammar.peg
package stock_parser

type StockCodeParser Peg {
  pos int
  peekPos int
}

Item <- Line* !.
Line <-  FTStock / XLStock / Stock / OTHER 

# Any other characters, to ignore
OTHER <- (.)

# Match stockcode
Stock <- ( 
  # $BABA$, $BABA.US$
  '$' Code (Suffix / Suffix?) '$' /

  # $BABA.US $700.HK 
  '$' Code Suffix /

  # BABA.US 700.HK
  ' '+ Code Suffix /

  # $BABA（无后缀仅允许大写；$+小写必须带 .US 才在上一行匹配）
  '$' USCodeUpper /

  # (NYSE: A)
  '(' ('NYSE' / 'NASDAQ') ('：' / ':') SP* USCode ')' /

  # (HK:2015) (US:BABA)
  '(' Market ':' Code ')' 
)

XLStock <- (
  # $阿里巴巴(BABA)$ $中国平安(SH601318)$ $腾讯控股(00700)$ $百度集团-SW(09988)$ $恒生科技指数(HKHSTECH)$ $恒生指数(HKHSI)$ $CoinBase Global(COIN)$
  '$' StockName '(' (CNMarket ACode /  HKMarket HSCODE / USCode / HKCode / .USCode) ')' '$'
)

FTStock <- (
  # $阿里巴巴(BABA.US)$ $腾讯控股(00700.HK)$  $歌尔股份(002241.SZ)$
  '$' (StockName / StockName '-' Letter+)  '(' Code '.' Market ')' '$'  
)

StockName <- [^"()"]*

Code <- (USCode / HKCode / ACode)

# 美股代码允许大小写字母（如 Amazon、BABA），仅当带 Suffix（如 .US）时用
USCode <- '.'?USLetter+
USLetter <- [A-Za-z]
# 无后缀的 $xxx 只匹配大写，且后面不能跟小写（避免 $Amazon 只匹配成 $A）
USCodeUpper <- '.'?Letter+ ![a-z]
HKCode <- Number+
ACode <- Number+

HSCODE <- ('HSTECH' / 'HSI')


Letter <- [A-Z]
Number <- [0-9]

Suffix <- '.' (Market / "O")

Market <- (CNMarket / HKMarket / USMarket / SGMarket)
CNMarket <- ('SH' / 'SZ')
HKMarket <- 'HK'
USMarket <- 'US'
SGMarket <- 'SG'

# Any spaces
SP <- " " / "\t"
